# VolcanicSkies

./: .gitignore  CMakeLists.txt  CMakeListsApple.txt  CMakeListsLinux.txt  README.md  buildvwapple.sh  elevLine.py
lib/: OBJ_Loader.h  PerlinNoise.hpp
lib/Eigen/: links.txt
resources/: PlanetEarth.json  StandardSettings.json  StandardVWSettings.json  WrongFormattedPlanet.json  sthelens_detailded_sub5.mtl  test.pwea
src/Engines/: abstractEngine.cpp  abstractEngine.h  advectionEngine.h  atmosphericHeatingEngine.h  heatDissipationEngine.h  moistureUptakeEngine.h  obstaclesEngine.h  phaseTransitionEngine.h  precipitationEngine.h  pressureEngine.h  pressureWaveEngine.h  sunEngine.h  terrainHeatingEngine.h  verticalCouplingEngine.h  worldEngine.h
src/Models/: airLayer.h  convectionLayer.h  planet.cpp  planet.h  pressureWave.h  sun.h  terrain.h  world.h
src/PWMDataStructure/: AbstractPWMDataStructure.h  Coordinate.cpp  Coordinate.h  CubedSphereDS.h  SSGDataStructure.h  flatStaggeredGrid.h  position.cpp  position.h  square2DArray.h
src/Plume/: skirt.cpp  skirt.hpp  smoke.cpp  smoke.hpp  smokeLayer.hpp  terrain_structure.cpp  terrain_structure.hpp  timer.cpp
src/Tests/: AdvectionEngineTest.cpp  AirLayerTest.cpp  AtmosphericHeatingEngineTest.cpp  CloudClassificationTest.cpp  ConvectionLayerTest.cpp  CoordinateTest.cpp  FlatMACTest.cpp  FlatMACUlyssesComparison.cpp  HeatDissipationEngineTest.cpp  MergeTest.cpp  MoistureUptakeEngineTest.cpp  ObstaclesEngineTest.cpp  PhaseTransitionEngineTest.cpp  PlanetTest.cpp  PositionTest.cpp  PrecipitationEngineTest.cpp  PressureWaveEngineTest.cpp  SettingsTest.cpp  SmoothingTest.cpp  Square2DArrayTest.cpp  SunEngineTest.cpp  SunTest.cpp  TerrainHeatingEngineTest.cpp  TerrainTest.cpp  TestTemplate.cpp  VerticalCouplingEngineTest.cpp  WorldEngineTest.cpp  WorldTest.cpp
src/Utils/: atmofuncs.h  cloudType.h  cloudUtils.h  mathUtils.h  objUtils.h  polynomials.cpp  polynomials.h  settings.cpp  settings.h  vdbExporter.h  vizUtils.h
volcanoviz/: README-TerViewer.txt
volcanoviz/common/: basic_types.h
volcanoviz/data/S1000-1000-1024/: S1000-1000-1024_test.elv
volcanoviz/data/sthelens/: airlayers_struct.txt  plumespheres_0.txt  plumespheres_1.txt  plumespheres_10.txt  plumespheres_11.txt  plumespheres_12.txt  plumespheres_13.txt  plumespheres_14.txt  plumespheres_2.txt  plumespheres_3.txt  plumespheres_4.txt  plumespheres_5.txt  plumespheres_6.txt  plumespheres_7.txt  plumespheres_8.txt  plumespheres_9.txt  sthelens.elv  sthelens1.elv  sthelens2.elv
volcanoviz/data_importer/: data_importer 2.h  data_importer.cpp  data_importer.h
volcanoviz/models/: bison.stl  elephant.stl  sheep.stl
volcanoviz/viewer/: CMakeLists.txt  buildviewer.sh  buildviewerxcode.sh
volcanoviz/viewer/clh/: CMakeLists.txt
volcanoviz/viewer/common/: CMakeLists.txt  cnpy.cpp  initialize.cpp  map.h  source2cpp 2.cpp
volcanoviz/viewer/terviewer/: CMakeLists.txt  dice_roller.cpp  dice_roller.h  glheaders.h  glwidget.cpp  glwidget.h  main.cpp  main_sunsim.cpp  mesh.cpp  mesh.h  noisefield.cpp  noisefield.h  palette.cpp  palette.h  shape.cpp  shape.h  stroke.cpp  terrain.cpp  terrain.h  trenderer.cpp  trenderer.h  typemap.cpp  typemap.h  vecpnt.cpp  vecpnt.h  view.cpp  view.h  volcano.cpp  volcano.h  window.cpp  window.h
volcanoviz/viewer/terviewer/shaders/: phongRSmanip.frag  rad_scaling_pass2.frag
volcanoviz/viewer/windows_extern_packages/sqlite3/: sqlite3.exp  sqlite3.lib
volcanoviz/viewer/xcode/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
volcanoviz/viewer/xcode/CMakeScripts/: ReRunCMake.make
volcanoviz/viewer/xcode/TerViewer.xcodeproj/: project.pbxproj
volcanoviz/viewer/xcode/TerViewer.xcodeproj/project.xcworkspace/xcuserdata/james.xcuserdatad/: UserInterfaceState.xcuserstate
volcanoviz/viewer/xcode/TerViewer.xcodeproj/xcuserdata/james.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
volcanoviz/viewer/xcode/TerViewer.xcodeproj/xcuserdata/james.xcuserdatad/xcschemes/: xcschememanagement.plist
volcanoviz/viewer/xcode/clh/: CTestTestfile.cmake  cmake_install.cmake
volcanoviz/viewer/xcode/common/: CTestTestfile.cmake  cmake_install.cmake
volcanoviz/viewer/xcode/terviewer/: CTestTestfile.cmake  cmake_install.cmake
